ci: run codeql and sonarcloud on push to main

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,8 +1,11 @@
 name: SonarCloud
 on:
+  push:
+    branches:
+      - 'main'
   pull_request:
     branches:
-      - main
+      - 'main'
 jobs:
   sonarcloud:
     name: SonarCloud
